# LangGraph-Advanced-Tutorial

./: pyproject.toml
Day-02/: tei_url.txt
Day-03/: 01_02_graphrag_law_usage.ipynb  02_workflows_and_agents.ipynb  03_multi_agent_patterns.ipynb  04_dynamic_allocation_context_engineering.ipynb  neo4j_local_install.md
Day-03/DeepAgent/: pyproject.toml
Day-03/DeepAgent/examples/research/: research_agent.py
Day-03/DeepAgent/src/deepagents/: __init__.py  graph.py
Day-03/DeepAgent/src/deepagents/backends/: filesystem.py  protocol.py  state.py  utils.py
Day-03/DeepAgent/src/deepagents/middleware/: __init__.py  subagents.py
Day-03/DeepResearch/: AGENTS.md
Day-03/DeepResearch/src/: auth.py  configuration.py  state.py
Day-04/: 01_01_graphrag_basic.ipynb  02_01_fc_vs_so.md  02_02_slm_tool_calling_demo.py  03_02_make_mcp_server.py  04_context_optimization_with_mcp.py  05_01_be_good_mcp_server_architecture.md  05_mcp_server_boiler_plate.py  06_langchain_mcp_adapters_client.py  image_url.txt  neo4j_local_install.md
Day-04/DeepResearch/: .env.example  .gitignore  pyproject.toml
Day-04/DeepResearch/src/: deep_researcher.py  evaluation.py  utils.py
Day-04/SerenaMCP/: AGENTS.md  GEMINI.md
Day-05/: 01_ragas_evaluation.ipynb  02_langfuse_langgraph_integration.ipynb  03_deepeval.ipynb  04_persona_dataset.ipynb  05_llm_judge_bias_mitigation.ipynb  langfuse_base_synthetic_datasets.py  langfuse_evaluate_langgraph_agents.py  langfuse_integration_langgraph.py  langfuse_prompt_management_performance_benchmark.py  langgraph_project_structure.md  stateful_deepagent.ipynb
Day-05/DeepResearch/: TodayTask.txt  langgraph.json  langsmith_url.txt
Day-06/: 01_Synthetic_dataset_create_finetuning.ipynb  02_Gpt-oss-20B-Fine-tuning-4Bit.ipynb  03_Qwen3_14B-Fine-Tuning_Reasoning-Conversational.ipynb  MAC_BOOK_설치시 주의사항.md  수업_자료.txt
Day-06/DeepAgent/: AGENTS.md
Day-06/DeepResearch_DeepAgent/: .env.example  TODO.txt  sample_result.txt
Day-07/: LLM_Optimization_Techniques.md  google_sheet.txt  vLLM_외국어_차단_Github_Repos.md  수업자료_링크.txt
Day-07/vLLM/: README.md
Day-09/: README_FILE_STORAGE.md  README_TOOLRUNTIME_HANDOFF.md  custom_handoff_example.py  fixed_handoff_example.py  graphs.py  subagent_handoff_comparison.py
Day-10/: 자료공유.md
(+91 files in other folders)
